@@ -1,3 +1,10 @@
+2011-03-20  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/42544
+	PR c/48197
+	* c-common.c (shorten_compare): If primopN is first sign-extended
+	to opN and then zero-extended to result type, set primopN to opN.
+
 2011-05-04  Jakub Jelinek  <jakub@redhat.com>
 
 	Backported from mainline
